@@ -1,3 +1,8 @@
+2006-07-11  Kouhei Sutou  <kou@cozmixng.org>
+
+	* packages/cairo/ext/rb_cairo_constants.c: added a check whether
+	SVG surface is available or not.
+
 2006-07-01  Kouhei Sutou  <kou@cozmixng.org>
 
 	* NEWS: added 1.2.0 entry.
